force-app/main/default/objects/MD_OpportunityLineItem__c/MD_OpportunityLineItem__c.object-meta.xml
<CustomObject>
    <label>Proposed Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposed Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>