force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <label>Delete</label>
    <length>122</length>
    <type>Text</type>
</CustomField>