force-app/main/default/objects/MD_OpportunityLineItem__c/fields/delete_for_syncing__c.field-meta.xml
<CustomField>
    <fullName>delete_for_syncing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>delete for syncing</label>
    <type>Checkbox</type>
</CustomField>