force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Master_Technology__c.field-meta.xml
<CustomField>
    <fullName>Master_Technology__c</fullName>
    <formula>text( Product__r.Technology__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Technology</label>
    <type>Text</type>
</CustomField>