force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Master_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Master_Vendor__c</fullName>
    <formula>text(Product__r.Vendor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Vendor</label>
    <type>Text</type>
</CustomField>