force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <formula>Product__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>