force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Material_Number1__c.field-meta.xml
<CustomField>
    <fullName>Material_Number1__c</fullName>
    <label>Material Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>