force-app/main/default/objects/MD_OpportunityLineItem__c/fields/MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>MaterialNumber__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id, Material_Number__c , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Number</label>
    <type>Text</type>
</CustomField>