force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Price_Adjustment_Value__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment_Value__c</fullName>
    <label>Price Adjustment Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>