force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Price_Uom__c.field-meta.xml
<CustomField>
    <fullName>Price_Uom__c</fullName>
    <label>Price Uom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>