force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Price_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Price_Valid_From__c</fullName>
    <label>Price Valid From</label>
    <type>Date</type>
</CustomField>