force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>MD_Product2__c</referenceTo>
    <relationshipName>Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>