force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item,,</label>
    <referenceTo>MD_Quote_Line_Item__c</referenceTo>
    <relationshipName>Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>