force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Quote_Line_Item_Sync_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Sync_Formula__c</fullName>
    <formula>Quote_Line_Item__r.Quote_Sync_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Item Sync Formula</label>
    <type>Checkbox</type>
</CustomField>