force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Size_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Size_Dimensions__c</fullName>
    <formula>Product__r.Size_Dimensions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size/Dimensions</label>
    <type>Text</type>
</CustomField>