force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Total_Price1__c.field-meta.xml
<CustomField>
    <fullName>Total_Price1__c</fullName>
    <label>Total Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>