force-app/main/default/objects/MD_OpportunityLineItem__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>IF (
 TEXT(Price_Adjustment_Type__c) = &quot;Surcharge&quot;,
(  Unit_Price__c  + Price_Adjustment_Value__c) * Quantity__c ,
IF(
TEXT(Price_Adjustment_Type__c) = &quot;Discount&quot;,
( Unit_Price__c  - Price_Adjustment_Value__c) * Quantity__c ,
Unit_Price__c * Quantity__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>