force-app/main/default/objects/MD_OpportunityLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>